add configurations